--- a/MessagesBundle_en.properties
+++ b/MessagesBundle_en.properties
@@ -1,5 +1,18 @@
-addButton=Add
-removeButton=Remove
-showCart=Show Cart
-viewCart=View Cart
-checkout=Checkout
+product.name.apple=Apple
+product.name.banana=Banana
+product.name.orange=Orange
+product.name.milk=Milk
+product.name.bread=Bread
+product.name.eggs=Eggs
+product.name.cheese=Cheese
+product.name.chicken=Chicken
+product.name.beef=Beef
+product.name.water=Water Bottle
+
+label.search=Search:
+label.availableProducts=Available Products:
+label.yourCart=Your Cart:
+label.total=Total:
+button.checkout=Checkout
+prompt.quantityAdd=How many of {0} would you like to add?
+prompt.quantityRemove=How many of {0} would you like to remove?
