--- a/MessagesBundle_es.properties
+++ b/MessagesBundle_es.properties
@@ -1,5 +1,18 @@
-addButton=Añadir
-removeButton=Eliminar
-showCart=Mostrar Carrito
-viewCart=Ver Carrito
-checkout=Pagar
+product.name.apple=Manzana
+product.name.banana=Plátano
+product.name.orange=Naranja
+product.name.milk=Leche
+product.name.bread=Pan
+product.name.eggs=Huevos
+product.name.cheese=Queso
+product.name.chicken=Pollo
+product.name.beef=Carne de res
+product.name.water=Botella de Agua
+
+label.search=Buscar:
+label.availableProducts=Productos Disponibles:
+label.yourCart=Tu Carrito:
+label.total=Total:
+button.checkout=Pagar
+prompt.quantityAdd=¿Cuántos de {0} desea agregar?
+prompt.quantityRemove=¿Cuántos de {0} desea quitar?
