--- a/MessagesBundle_lv.properties
+++ b/MessagesBundle_lv.properties
@@ -1,5 +1,18 @@
-addButton=Pievienot
-removeButton=Noņemt
-showCart=Rādīt Grozu
-viewCart=Skatīt Grozu
-checkout=Norēķināties
+product.name.apple=Ābols
+product.name.banana=Banāns
+product.name.orange=Apelsīns
+product.name.milk=Piens
+product.name.bread=Maize
+product.name.eggs=Olas
+product.name.cheese=Siers
+product.name.chicken=Vista
+product.name.beef=Liellopu gaļa
+product.name.water=Ūdens pudele
+
+label.search=Meklēt:
+label.availableProducts=Pieejamie Produkti:
+label.yourCart=Jūsu Grozs:
+label.total=Kopsumma:
+button.checkout=Noformēt pirkumu
+prompt.quantityAdd=Cik {0} vēlaties pievienot?
+prompt.quantityRemove=Cik {0} vēlaties noņemt?
