--- a/MessagesBundle_lv.properties
+++ b/MessagesBundle_lv.properties
@@ -1,18 +1,14 @@
-product.name.apple=Ābols
-product.name.banana=Banāns
-product.name.orange=Apelsīns
-product.name.milk=Piens
-product.name.bread=Maize
-product.name.eggs=Olas
-product.name.cheese=Siers
-product.name.chicken=Vista
-product.name.beef=Liellopu gaļa
-product.name.water=Ūdens pudele
-
-label.search=Meklēt:
-label.availableProducts=Pieejamie Produkti:
-label.yourCart=Jūsu Grozs:
-label.total=Kopsumma:
-button.checkout=Noformēt pirkumu
-prompt.quantityAdd=Cik {0} vēlaties pievienot?
-prompt.quantityRemove=Cik {0} vēlaties noņemt?
+totalLabel=Kopā:
+searchPrompt=Meklēt produktus...
+checkoutButton=Apmaksāt
+searchLabel=Meklēt:
+productsLabel=Pieejamie produkti:
+cartLabel=Jūsu grozs:
+windowTitle=Veikala GUI
+addQuantity=Cik daudz no:
+removeQuantity=Cik daudz jānoņem:
+quantityTitle=Daudzuma ievade
+errorTitle=Kļūda
+invalidNumber=Nederīgs numura formāts
+checkoutComplete=Pirkums pabeigts
+totalCost=Kopējās izmaksas bija
