--- a/MessagesBundle_en.properties
+++ b/MessagesBundle_en.properties
@@ -1,18 +1,14 @@
-product.name.apple=Apple
-product.name.banana=Banana
-product.name.orange=Orange
-product.name.milk=Milk
-product.name.bread=Bread
-product.name.eggs=Eggs
-product.name.cheese=Cheese
-product.name.chicken=Chicken
-product.name.beef=Beef
-product.name.water=Water Bottle
-
-label.search=Search:
-label.availableProducts=Available Products:
-label.yourCart=Your Cart:
-label.total=Total:
-button.checkout=Checkout
-prompt.quantityAdd=How many of {0} would you like to add?
-prompt.quantityRemove=How many of {0} would you like to remove?
+totalLabel=Total:
+searchPrompt=Search for products...
+checkoutButton=Checkout
+searchLabel=Search:
+productsLabel=Available Products:
+cartLabel=Your Cart:
+windowTitle=Shop GUI
+addQuantity=How many of:
+removeQuantity=How many to remove:
+quantityTitle=Quantity Input
+errorTitle=Error
+invalidNumber=Invalid number format
+checkoutComplete=Checkout Complete
+totalCost=The total cost was
