--- a/MessagesBundle_es.properties
+++ b/MessagesBundle_es.properties
@@ -1,18 +1,14 @@
-product.name.apple=Manzana
-product.name.banana=Plátano
-product.name.orange=Naranja
-product.name.milk=Leche
-product.name.bread=Pan
-product.name.eggs=Huevos
-product.name.cheese=Queso
-product.name.chicken=Pollo
-product.name.beef=Carne de res
-product.name.water=Botella de Agua
-
-label.search=Buscar:
-label.availableProducts=Productos Disponibles:
-label.yourCart=Tu Carrito:
-label.total=Total:
-button.checkout=Pagar
-prompt.quantityAdd=¿Cuántos de {0} desea agregar?
-prompt.quantityRemove=¿Cuántos de {0} desea quitar?
+totalLabel=Total:
+searchPrompt=Buscar productos...
+checkoutButton=Pagar
+searchLabel=Buscar:
+productsLabel=Productos disponibles:
+cartLabel=Su carrito:
+windowTitle=Interfaz de Compras
+addQuantity=Cuántos de:
+removeQuantity=Cuántos desea remover:
+quantityTitle=Entrada de cantidad
+errorTitle=Error
+invalidNumber=Formato de número inválido
+checkoutComplete=Compra completada
+totalCost=El costo total fue
